--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --check-leaks test/",
     "install-ubuntu-deps": "apt-get install imagemagick graphicsmagick libcairo2-dev libjpeg-dev libgif-dev --fix-missing",
     "install-mac-deps": "brew install imagemagick --with-webp && xcode-select --install && brew install pkgconfig pixman libjpeg giflib cairo",
-    "install-redhat-deps": "yum install ImageMagick GraphicsMagick"
+    "install-redhat-deps": "yum install ImageMagick GraphicsMagick libcairo2-dev libjpeg-dev libgif-dev"
   },
   "optionalDependencies": {
     "canvas": "^1.2.10",
