--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "image-size": "^0.5.0",
     "lockfile": "^1.0.1",
     "lodash": "^3.10.1",
+    "mime": "^1.3.4",
     "mkdirp": "0.x",
     "moment": "1.7.x",
     "node-mime": "^1.0.0",
