--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lockfile": "^1.0.1",
     "lodash": "^3.10.1",
     "mime": "^1.3.4",
+    "minimist": "^1.2.0",
     "mkdirp": "0.x",
     "moment": "1.7.x",
     "node-mime": "^1.0.0",
