--- a/package.json
+++ b/package.json
@@ -32,6 +32,17 @@
   },
   "main": "./index.js",
   "license": "MIT",
+  "scripts": {
+    "app": "node app/app.js",
+    "prepublish": "npm prune",
+    "test": "mocha --reporter spec --bail --check-leaks test/",
+    "pretest": "jshint lib",
+    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot --check-leaks test/",
+    "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --check-leaks test/",
+    "install-ubuntu-deps": "apt-get install graphicsmagick libcairo2-dev libjpeg-dev libgif-dev --fix-missing",
+    "install-mac-deps": "brew install graphicsmagick && ( xcode-select --install || echo 'xcode may have already been installed.' ) && brew install pkgconfig pixman libjpeg giflib cairo",
+    "install-redhat-deps": "yum install GraphicsMagick cairo cairo-devel libjpeg-devel cairomm-devel libjpeg-turbo-devel pango pango-devel pangomm pangomm-devel giflib-devel"
+  },
   "dependencies": {
     "async": "0.1.x",
     "canvas": "^2.6.1",
@@ -59,21 +70,10 @@
     "connect": "*",
     "express": "^4.13.3",
     "istanbul": "^0.3.2",
-    "jshint": "^2.5.x",
-    "mocha": "^2.1.0",
+    "jshint": "^2.12.0",
+    "mocha": "^8.2.1",
     "request-image-size": "^1.2.2",
     "should": "^4.4.4"
-  },
-  "scripts": {
-    "app": "node app/app.js",
-    "prepublish": "npm prune",
-    "test": "mocha --reporter spec --bail --check-leaks test/",
-    "pretest": "jshint lib",
-    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot --check-leaks test/",
-    "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --check-leaks test/",
-    "install-ubuntu-deps": "apt-get install graphicsmagick libcairo2-dev libjpeg-dev libgif-dev --fix-missing",
-    "install-mac-deps": "brew install graphicsmagick && ( xcode-select --install || echo 'xcode may have already been installed.' ) && brew install pkgconfig pixman libjpeg giflib cairo",
-    "install-redhat-deps": "yum install GraphicsMagick cairo cairo-devel libjpeg-devel cairomm-devel libjpeg-turbo-devel pango pango-devel pangomm pangomm-devel giflib-devel"
   },
   "engines": {
     "node": ">=12.4.0"
