--- a/package.json
+++ b/package.json
@@ -44,31 +44,28 @@
     "install-redhat-deps": "yum install GraphicsMagick cairo cairo-devel libjpeg-devel cairomm-devel libjpeg-turbo-devel pango pango-devel pangomm pangomm-devel giflib-devel"
   },
   "dependencies": {
-    "async": "0.1.x",
     "canvas": "^2.6.1",
-    "debug": "^2.2.0",
-    "es6-promise": "^3.1.2",
-    "fs-extra": "^0.28.0",
-    "gm": "^1.20.0",
-    "image-size": "^0.5.0",
-    "lockfile": "^1.0.1",
-    "lodash": "^3.10.1",
-    "mime": "^1.3.4",
-    "minimist": "^1.2.0",
+    "debug": "^2.6.9",
+    "fs-extra": "^9.0.1",
+    "gm": "^1.23.1",
+    "image-size": "^0.9.3",
+    "lockfile": "^1.0.4",
+    "lodash": "^4.17.20",
+    "mime": "^1.6.0",
+    "minimist": "^1.2.5",
     "mkdirp": "0.x",
-    "moment": "1.7.x",
+    "moment": "^2.29.1",
     "node-mime": "^1.0.0",
-    "pause": "0.x",
+    "pause": "^0.1.0",
     "request": "2.x",
-    "request-promise": "^3.0.0",
-    "send": "0.x",
-    "smartcrop": "0.0.1"
+    "send": "^0.17.1",
+    "smartcrop": "^2.0.3"
   },
   "devDependencies": {
     "after": "^0.8.1",
     "chai": "^1.9.1",
-    "connect": "*",
-    "express": "^4.13.3",
+    "connect": "^3.7.0",
+    "express": "^4.17.1",
     "istanbul": "^0.3.2",
     "jshint": "^2.12.0",
     "mocha": "^8.2.1",
