Added imageDirectory option to the node arguments and appConfig

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -1,5 +1,6 @@
 {
     "baseDirectory": "/content/smart",
+    "imageDirectory": "images",
     "port": 3000,
     "allowedExtensions" : ["png", "gif", "jpg", "jpeg"],
     "allowedMimeTypes" : [
